# codedoc-ai

./: .gitignore  Demo1.java  README.md  log.txt  pyproject.toml  scratch.py  test_parser.py  test_parserj.py
.codedoc-ai/: chroma.sqlite3
.github/workflows/: docbot.yml  index.yaml
docs/: README.md
src/codedoc_ai/: generator.py  main.py  router.py
src/codedoc_ai/embedder/: __init__.py
src/codedoc_ai/indexer/: __init__.py
src/codedoc_ai/models/: schemas.py
src/codedoc_ai/parser/: cpp_parser.py  go_parser.py  java_parser.py  js_parser.py  python_parser.py  rust_parser.py
src/codedoc_ai/providers/: gemini.py  groq.py
src/codedoc_ai/search/: __init__.py
src/codedoc_ai/utils/: ids.py
tests/: test_python_parser.py
