[project]
name = "codedoc-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "SahilSri00",email = "sknsrivastavainfinix+gh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.1.0,<15.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
